--- a/big/env/cfg/train/BallBalancePPO_for_PIG.yaml
+++ b/big/env/cfg/train/BallBalancePPO_for_PIG.yaml
@@ -34,7 +34,7 @@ params:
   load_path: ${...checkpoint} # path to the checkpoint to load
 
   config:
-    name: ${resolve_default:BallBounce,${....experiment}}
+    name: ${resolve_default:BallBalance,${....experiment}}
     full_experiment_name: ${.name}
     env_name: rlgpu
     multi_gpu: ${....multi_gpu}
@@ -48,7 +48,7 @@ params:
     normalize_advantage: True
     gamma: 0.99
     tau: 0.95
-    learning_rate: 3e-4
+    learning_rate: 5e-5
     lr_schedule: adaptive
     kl_threshold: 0.008
     score_to_win: 20000
@@ -59,8 +59,8 @@ params:
     entropy_coef: 0.0
     truncate_grads: True
     e_clip: 0.2
-    horizon_length: 16
-    minibatch_size: 64 # 8192
+    horizon_length: 128
+    minibatch_size: 512 # 8192
     mini_epochs: 8
     critic_coef: 4
     clip_value: True
